[package]
name         = "signal-engine-management"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-engine-management"
description  = "Engine-management lifecycle signal contract."
publish      = false

[lib]
name = "signal_engine_management"
path = "src/lib.rs"

[dependencies]
nota-codec = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "operator-full-schema-spirit-2026-05-26" }
signal-persona-origin = { git = "https://github.com/LiGoldragon/signal-persona-origin.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"
